--- a/exoplanets.html
+++ b/exoplanets.html
@@ -27,7 +27,7 @@
 						<nav id="nav">
 							<ul>
 								<li><a href="index.html">Home</a></li>
-								
+								<li><a href="citsci.html">Education</a></li>
 							</ul>
 						</nav>
 
