--- a/citsci.html
+++ b/citsci.html
@@ -28,6 +28,7 @@
 							<ul>
 								<li><a href="index.html">Home</a></li>
 								<li><a href="exoplanets.html">Exoplanets</a></li>
+								<li><a href="resources.html">Resources</a></li>
 							</ul>
 						</nav>
 
@@ -41,7 +42,7 @@
 						<!-- Content -->
 							<div id="content">
 								<article class="box post">
-									<p> <b>Citizen science</b> is a broad term that encompasses activities that involve members of the public in scientific research. It typically involves crowdsourcing the classification of large datasets that would be near impossible to go through for a small team of scientists. While computers are great at math, it’s still difficult for them to notice patterns in images like humans naturally can (think about all those annoying CAPTCHAs you’ve had to fill out online). Citizen science allows for the analysis of thousands of samples or images in a relatively short amount of time while also enabling regular people to make meaningful contributions to cutting edge science. One of the most popular citizen science interfaces is <a href=”https://www.zooniverse.org/”> Zooniverse </a> , which hosts dozens of ongoing citizen science projects. </p>
+									<p> <b>Citizen science</b> is a broad term that encompasses activities that involve members of the public in scientific research. It typically involves crowdsourcing the classification of large datasets that would be near impossible to go through for a small team of scientists. While computers are great at math, it’s still difficult for them to notice patterns in images like humans naturally can (think about all those annoying CAPTCHAs you’ve had to fill out online). Citizen science allows for the analysis of thousands of samples or images in a relatively short amount of time while also enabling regular people to make meaningful contributions to cutting edge science. One of the most popular citizen science interfaces is <a href=”https://www.zooniverse.org/”> Zooniverse</a>, which hosts dozens of ongoing citizen science projects. </p>
 									<p> In Arizona State University’s Astronomy Education group, I help develop curricula that incorporate citizen science activities in the classroom. These learning experiences have a strong positive effect on students’ confidence and their ability to use data to make informed conclusions. I’m currently working on making these lessons more <b> culturally responsive</b> and inclusive. One of the leading causes of student attrition in the natural sciences is a lack of a sense of belonging within the scientific community. Students from non majority groups can feel unwelcome if contributions from diverse backgrounds are not apparent or valued in their field. Through this curricular model, I aim to empower students to address barriers to participation in science and lay the groundwork for more inclusive science education in the future.</p>
 
 
