--- a/exoplanets.html
+++ b/exoplanets.html
@@ -28,6 +28,7 @@
 							<ul>
 								<li><a href="index.html">Home</a></li>
 								<li><a href="citsci.html">Education</a></li>
+								<li><a href="resources.html">Resources</a></li>
 							</ul>
 						</nav>
 
@@ -50,7 +51,7 @@
 									<header>
 										<p>Image Source: NASA/JPL-Caltech/Lizbeth B. De La Torre </p>
 									</header>
-									<p>Planets outside our solar system are called <b> exoplanets</b>. The first exoplanets were discovered in the 1990’s, and since then we’ve confirmed more than 4300 as of this writing. While we’ve only begun to scratch the surface of all the exoplanets in the galaxy, we’ve already uncovered a beautiful diversity among alien worlds. The first exoplanets discovered were <b> hot Jupiters</b>, gaseous planets in extremely close orbits around their stars. One year for hot Jupiters may just be a few days, and the hottest can be upwards of 4000 Kelvin (the surface of the sun is 5600 Kelvin). Next are <b>sub Neptunes</b>, which as their name suggests, are also gaseous planets but which are smaller than Neptune. These two types of planets are peculiar as there are none like them in our own solar system</p>
+									<p>Planets outside our solar system are called <b> exoplanets</b>. The first exoplanets were discovered in the 1990’s, and since then we’ve confirmed more than 4300 as of this writing. While we’ve only begun to scratch the surface of all the exoplanets in the galaxy, we’ve already uncovered a beautiful diversity among alien worlds. The first exoplanets discovered were <b> hot Jupiters</b>, gaseous planets in extremely close orbits around their stars. One year for hot Jupiters may just be a few days, and the hottest can be upwards of 4000 Kelvin (the surface of the sun is 5600 Kelvin). Next are <b>sub Neptunes</b>, which as their name suggests, are also gaseous planets but which are smaller than Neptune. These two types of planets are peculiar as there are none like them in our own solar system.</p>
 									<p>Of course, there are also <b>terrestrial</b> planets, rocky like the Earth. These can also be quite extreme, with liquid magma oceans or stationary hurricanes on permanent daysides. However, we know of some that orbit within their star’s <b>habitable zone</b>, traditionally defined as where liquid water on the surface could exist. It’s hard to pin down whether a planet is truly habitable as there are many factors at play, like stellar activity or the properties of the planet’s atmosphere.</p>
 									<p>Atmospheres are very important to the study of alien worlds. They are the most accessible part of an exoplanet we can measure, and they give us clues about what the planet is made of and the conditions on the surface. Exoplanet atmospheres are usually studied with <b>spectroscopy</b>, or counting photons by their different colors. We know certain molecules absorb or emit light at specific colors, so by counting photons at these colors, we can identify which molecules are in an atmosphere. By studying atmospheres, we can learn more about their underlying physics and how planets, including our own, came to be.</p>
 									
