--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 								<!-- <li><a href="left-sidebar.html">Left Sidebar</a></li> -->
 								<li><a href="exoplanets.html">Exoplanets</a></li>
 								<li><a href="citsci.html">Education</a></li>
-								<li><a href="coming-soon.html">Resources</a></li>
+								<li><a href="resources.html">Resources</a></li>
 								<li><a href="coming-soon.html">Blog</a></li>
 							</ul>
 						</nav>
@@ -132,9 +132,9 @@
 
 			<!-- Main -->
 				<section id="main" class="wrapper style2">
-					<div class="title">Resources (coming soon)</div>
+					<div class="title">Resources</div>
 					<div class="container">
-
+						<p> Check out my "Resources" page for a list of great webpages for early career astronomers. I also have a beginning Python tutorial on my github page, with more on the way!
 						<!-- Image -->
 							<!-- <a href="#" class="image featured">
 								<img src="../../exoplanet background.jpg" alt="" />
@@ -182,8 +182,8 @@
 									</div> -->
 								</div>
 								<ul class="actions special">
-									<li><a href="#" class="button style1 large">Get Started</a></li>
-									<li><a href="#" class="button style2 large">More Info</a></li>
+									<li><a href="resources.html" class="button style1 large">Resources</a></li>
+									<li><a href="https://github.com/petercbsmith/ASA-Python-2020" class="button style2 large">Github</a></li>
 								</ul>
 							</section>
 
