--- a/resources.html
+++ b/resources.html
@@ -43,7 +43,9 @@
 							<div id="content">
 								<article class="box post">
 									<p> As a student and early career astronomer myself, I've curated an extended list of references that I either look back to regularly or helped me get to where I am today. Different advice works for different people, but I hope some of these can help you: </p>
-									<header class="style1">
+
+									<br>
+									<header>
 										<h1>Quick References</h1>
 									</header>
 									<li><a href="http://www.astro.wisc.edu/~dolan/constants.html">Physical Constants and Astronomical Data</a></li>
@@ -57,7 +59,8 @@
 									<li><a href="https://www.astro.keele.ac.uk/jkt/tepcat/">TEPCat catalogue of transiting exoplanet properties</a></li>
 									<li><a href="http://simbad.u-strasbg.fr/simbad/">SIMBAD Astronomical Database</a></li>
 
-									<header class="style1">
+									<br>
+									<header>
 										<h1>Astronomy News and Blogs</h1>
 									</header>
 									<li><a href="http://skyandtelescope.org/astronomy-news/">Sky & Telescope</a></li>
@@ -68,6 +71,7 @@
 									<li><a href="https://todayinsci.com/">Today in science history</a></li>
 									<li><a href="https://www.astrobetter.com/">AstroBetter</a></li>
 
+									<br>
 									<header>
 										<h1>Internships, REU's, and jobs</h1>
 									</header>
@@ -82,6 +86,7 @@
 									<li><a href="https://www.lanl.gov/careers/career-options/student-internships/index.php">LANL internships</a></li>
 									<li><a href="https://jobregister.aas.org/">AAS job register</a></li>
 
+									<br>
 									<header>
 										<h1>Fellowships</h1>
 									</header>
@@ -95,6 +100,7 @@
 									<li><a href="https://docs.google.com/spreadsheets/d/19UhYToXOPZkZ3CM469ru3Uwk4584CmzZyAVVwQJJcyc/edit#gid=0">US and Canadian Physics and Astronomy graduate programs, their GRE requirements, and application fees</a></li>
 									<li><a href="http://pages.physics.cornell.edu/~ajd268/Notes/PGRE-Notes.pdf">Jeff Asaf Dror's PGRE notes</a></li>
 
+									<br>
 									<header>
 										<h1>DEI & Anti-racism</h1>
 									</header>
