--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 								<li><a href="exoplanets.html">Exoplanets</a></li>
 								<li><a href="citsci.html">Education</a></li>
 								<li><a href="resources.html">Resources</a></li>
-								<li><a href="coming-soon.html">Blog</a></li>
+								<li><a href="blog.html">Blog</a></li>
 							</ul>
 						</nav>
 
@@ -79,10 +79,7 @@
 						<ul class="actions">
 							<li><a href="Peter Smith CV.pdf" class="button style3 large">My CV</a></li>
 						</ul>
-						<header class="style1">
-							<h2>This website is a work in progress</h2>
-							<p>Please be patient while I contruct the best user experience</p>
-						</header>
+						
 					</div>
 				</section>
 
@@ -134,7 +131,7 @@
 				<section id="main" class="wrapper style2">
 					<div class="title">Resources</div>
 					<div class="container">
-						<p> Check out my "Resources" page for a list of great webpages for early career astronomers. I also have a beginning Python tutorial on my github page, with more on the way!
+						<p> Check out my "Resources" page for a list of great webpages for early career astronomers. I also have a beginning Python tutorial on my github page and occasionally post Python tutorials on my blog, with more on the way!
 						<!-- Image -->
 							<!-- <a href="#" class="image featured">
 								<img src="../../exoplanet background.jpg" alt="" />
