--- a/marker-tutorial.html
+++ b/marker-tutorial.html
@@ -14,7 +14,7 @@
 		<meta name="twitter:card" content="summary"/>
 		<meta name="twitter:title" content="Tutorial: Making custom matplotlib markers"/>
 		<meta name="twitter:description" content="Take your scatter plots to the next level by adding whatever image you want as a marker."/>
-		<meta name="twitter:image" content="blog_assets/marker_tutorial/thumbnail.png" />
+		<meta name="twitter:image" content="https://github.com/petercbsmith/petercbsmith.github.io/blob/master/blog_assets/marker_tutorial/thumbnail.png" />
 	</head>
 	<body class="no-sidebar is-preload">
 		<div id="page-wrapper">
