--- a/blog.html
+++ b/blog.html
@@ -30,6 +30,7 @@
 								<li><a href="exoplanets.html">Exoplanets</a></li>
 								<li><a href="citsci.html">Education</a></li>
 								<li><a href="resources.html">Resources</a></li>
+								<li><a href="blog.html">Blog</a></li>
 								<!-- <li>
 									<a href="#">Dropdown</a>
 									<ul>
