--- a/marker-tutorial.html
+++ b/marker-tutorial.html
@@ -15,7 +15,7 @@
 		<meta name="twitter:title" content="Tutorial: Making custom matplotlib markers"/>
 		<meta name="twitter:description" content="Take your scatter plots to the next level by adding whatever image you want as a marker."/>
 		<meta name="twitter:image" content="https://github.com/petercbsmith/petercbsmith.github.io/blob/master/blog_assets/marker_tutorial/thumbnail.png?raw=true" />
-		
+
 	</head>
 	<body class="no-sidebar is-preload">
 		<div id="page-wrapper">
@@ -108,7 +108,7 @@
 
 									<p>The svgpathtools package allows us to read SVG paths into python, and svgpath2mpl will allow us to parse the SVG path of our image to a matplotlib  𝙿𝚊𝚝𝚑  object.</p>
 
-									<p>Note: svgpathtools is not necessary if you prefer to manually copy and past the "d" string of the SVG path. This may or may not be necessary depending on your image. See Step 4a for more detail.</p>
+									<p>Note: svgpathtools is not necessary if you prefer to manually copy and paste the "d" string of the SVG path. This may or may not be necessary depending on your image. See Step 4a for more detail.</p>
 
 									<script src="https://gist.github.com/petercbsmith/3b155ece9e127fc7fcc794089f3ea913.js"></script>
 
