--- a/resources.html
+++ b/resources.html
@@ -29,6 +29,7 @@
 								<li><a href="index.html">Home</a></li>
 								<li><a href="exoplanets.html">Exoplanets</a></li>
 								<li><a href="citsci.html">Education</a></li>
+								<li><a href="resources.html">Resources</a></li>
 								<li><a href="blog.html">Blog</a></li>
 							</ul>
 						</nav>
