--- a/exoplanets.html
+++ b/exoplanets.html
@@ -27,6 +27,7 @@
 						<nav id="nav">
 							<ul>
 								<li><a href="index.html">Home</a></li>
+								<li > <a href=#>Exoplanets</a> </li>
 								<li><a href="citsci.html">Education</a></li>
 								<li><a href="resources.html">Resources</a></li>
 								<li><a href="blog.html">Blog</a></li>
