--- a/marker-tutorial.html
+++ b/marker-tutorial.html
@@ -152,7 +152,7 @@
 
 									<p>In photoshop, I believe this is done by selecting the appropriate layer, then right clicking on the selection and selecting Export > Export As. Choose SVG format and export to a text file.</p>
 
-									<p>Open the text file and look for a long string after a d = "....". Copy the string and paste it into your notebook or script and pass it through parse_path. Becasue the string is split into several lines, you'll need to put it in triple quotations (see below). Do the same steps as above after this and all elements of your image should be there.</p>
+									<p>Open the text file and look for a long string after a d = "....". Copy the string and paste it into your notebook or script and pass it through parse_path. Becasue the string is split into several lines, you'll need to put it in triple quotations (see below). Do the same steps as above after this (including the rotations, even if your original image was a PNG) and all elements of your image should be there.</p>
 
 									<p>Note: By using this method, you will not need the svgpathtools package.</p>
 
