--- a/marker-tutorial.html
+++ b/marker-tutorial.html
@@ -73,7 +73,7 @@
 									<script src="https://gist.github.com/petercbsmith/f71e460b2717bf808791084976b99c17.js"></script>
     								<img src="blog_assets/marker_tutorial/plot1.png" alt="" />
 
-    								<p> However, if these don't quite cut it, you can draw your own shapes by creating matplotlib  𝙿𝚊𝚝𝚑  objects. Path objects consist of two lists: one of the shape's vertices, and other with descriptions on how to draw the lines between those vertices, called codes. The path code tells python how to draw the line to the corresponding vertex from the previous one. Here's a simple square:</p>
+    								<p> However, if these don't quite cut it, you can draw your own shapes by creating matplotlib  𝙿𝚊𝚝𝚑  objects. Path objects consist of two lists: one of the shape's vertices, and the other with descriptions on how to draw the lines between those vertices, called codes. The path code tells python how to draw the line to the corresponding vertex from the previous one. Here's a simple square:</p>
 
     								<script src="https://gist.github.com/petercbsmith/44f25a0878199e9dc5bc782825f5d2e5.js"></script>
 
