--- a/blog.html
+++ b/blog.html
@@ -19,7 +19,7 @@
 
 					<!-- Logo -->
 						<div id="logo">
-							<h1><a href="index.html">Blog</a></h1>
+							<h1><a href="blog.html">Blog</a></h1>
 							<p>Fresh hot takes and plotting recipes</p>
 						</div>
 
@@ -31,6 +31,7 @@
 								<li><a href="citsci.html">Education</a></li>
 								<li><a href="resources.html">Resources</a></li>
 								<li><a href="blog.html">Blog</a></li>
+								<li><a href="gallery.html">Gallery</a></li>
 								<!-- <li>
 									<a href="#">Dropdown</a>
 									<ul>
