--- a/gallery.html
+++ b/gallery.html
@@ -10,6 +10,10 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<meta name="twitter:card" content="summary"/>
+		<meta name="twitter:title" content="Gallery"/>
+		<meta name="twitter:description" content="A collection of some of my favorite plots"/>
+		<meta name="twitter:image" content="https://github.com/petercbsmith/petercbsmith.github.io/blob/master/gallery/stratrails.png?raw=true" />
 	</head>
 	<body class="no-sidebar is-preload">
 		<div id="page-wrapper">
