--- a/marker-tutorial.html
+++ b/marker-tutorial.html
@@ -37,6 +37,7 @@
 								<li><a href="citsci.html">Education</a></li>
 								<li><a href="resources.html">Resources</a></li>
 								<li><a href="blog.html">Blog</a></li>
+								<li><a href="gallery.html">Gallery</a></li>
 							</ul>
 						</nav>
 
