--- a/marker-tutorial.html
+++ b/marker-tutorial.html
@@ -25,7 +25,7 @@
 
 					<!-- Logo -->
 						<div id="logo">
-							<h1><a href="index.html">Tutorial: Making custom matplotlib markers</a></h1>
+							<h1><a href=#>Tutorial: Making custom matplotlib markers</a></h1>
 							<!-- <p></p> -->
 						</div>
 
