--- a/retrieval-recipe.html
+++ b/retrieval-recipe.html
@@ -14,7 +14,7 @@
 		<meta name="twitter:card" content="summary"/>
 		<meta name="twitter:title" content="Plotting Recipe: Retrieval Animation"/>
 		<meta name="twitter:description" content="Outlining the code I wrote to make my atmospheric retrieval gif."/>
-		<meta name="twitter:image" content="https://github.com/petercbsmith/petercbsmith.github.io/blob/master/blog_assets/marker_tutorial/thumbnail.png?raw=true" /> 
+		<meta name="twitter:image" content="https://github.com/petercbsmith/petercbsmith.github.io/blob/master/blog_assets/retrieval_recipe/thumbnail cropp.png?raw=true" /> 
 
 	</head>
 	<body class="no-sidebar is-preload">
