--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 								</li> -->
 								<!-- <li><a href="left-sidebar.html">Left Sidebar</a></li> -->
 								<li><a href="Peter Smith CV summer 25.pdf">CV</a></li>
-								<li><a href="resarch.html">Research</a></li>
+								<li><a href="research.html">Research</a></li>
 								<!-- <li><a href="citsci.html">Education</a></li> -->
 								<li><a href="resources.html">Resources</a></li>
 								<li><a href="blog.html">Blog</a></li>
@@ -106,7 +106,7 @@
 									<h3><a href="#">Refractory-to-volatile ratios of ultra-hot Jupiters</a></h3>
 									<p><b>Image Credit:</b> NOIRLab/NSF/AURA/P. Marenfeld</p>
 
-									<p>The composition of a gas giant's primary atmosphere retains information about the environment the planet formed in. Measuring elemental ratios can help us place the planet's initial formation location in the protoplanetary disk. The carbon-to-oxygen (C/O) ratio has been a popular metric to do this, although a given C/O ratio can be degenerate with multiple formation locations. Combining this with the refractory-to-volatile ratio can break these degeneracies. For the first time using a single instrument, I measured the C/O and refractory-to-volatile ratios of a transiting exoplanet - WASP-121 b with IGRINS/Gemini South. My findings indicated possible formation interior to the water ice line, which is not commonly predicted by conventional planet formation models.</p>
+									<p>The composition of a gas giant's primary atmosphere retains information about the environment in which the planet formed. Measuring elemental ratios can help us place the planet's initial formation location in the protoplanetary disk. The carbon-to-oxygen (C/O) ratio has been a popular metric to do this, although a given C/O ratio can be degenerate with multiple formation locations. Combining this with the refractory-to-volatile ratio can break these degeneracies. For the first time using a single instrument, I measured the C/O and refractory-to-volatile ratios of a transiting exoplanet - WASP-121 b - with IGRINS/Gemini South. My findings indicated possible formation interior to the water ice line, which is not commonly predicted by conventional planet formation models.</p>
 									<ul class="actions">
 										<li><a href="https://ui.adsabs.harvard.edu/abs/2024AJ....168..293S/abstract" class="button style1">NASA ADS</a></li>
 									</ul>
