--- a/research.html
+++ b/research.html
@@ -54,7 +54,7 @@
 									</a> -->
 									<!-- <p> I primarily study the atmospheres of transiting giant exoplanets via spectroscopy. My goals are to understand planetary climates and atmospheric compositions and tie these back to the physics of heat circulation and planet formation. A major theme of my research is understanding the complementary strengths and weaknesses of ground-based high-resolution and space-based low-resolution spectroscopy for measuring these quantities, as well as the power of combining the two in joint analyses.</p> -->
 
-									<p>Below are abstracts and links for my published papers. In addition to these, I have several ongoing projects on a variety of research interests such as 3D atmospheric dynamics, hot-Neptunes, and development of telluric detrending techniques. Stay tuned! </p>
+									<p>Below are abstracts and links for my published papers. Additionally, I have several ongoing projects on a variety of research interests such as 3D atmospheric dynamics, hot-Neptunes, and development of telluric detrending techniques. Stay tuned! </p>
 									
 
 								</article>
