--- a/color-tutorial.html
+++ b/color-tutorial.html
@@ -33,8 +33,9 @@
 						<nav id="nav">
 							<ul>
 								<li><a href="index.html">Home</a></li>
-								<li><a href="exoplanets.html">Exoplanets</a></li>
-								<li><a href="citsci.html">Education</a></li>
+								<li><a href="Peter Smith CV Fa25.pdf">CV</a></li>
+								<li><a href="research.html">Research</a></li>
+								<!-- <li><a href="citsci.html">Education</a></li> -->
 								<li><a href="resources.html">Resources</a></li>
 								<li><a href="blog.html">Blog</a></li>
 								<li><a href="gallery.html">Gallery</a></li>
