--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 									</ul>
 								</li> -->
 								<!-- <li><a href="left-sidebar.html">Left Sidebar</a></li> -->
-								<li><a href="Peter Smith CV summer 25.pdf">CV</a></li>
+								<li><a href="Peter Smith CV Fa25.pdf">CV</a></li>
 								<li><a href="research.html">Research</a></li>
 								<!-- <li><a href="citsci.html">Education</a></li> -->
 								<li><a href="resources.html">Resources</a></li>
@@ -69,7 +69,7 @@
 						<!-- </a> -->
 
 						<ul class="actions">
-							<li><a href="Peter Smith CV summer 25.pdf" class="button style3 large">My CV</a></li>
+							<li><a href="Peter Smith CV Fa25.pdf" class="button style3 large">My CV</a></li>
 						</ul>
 
 						<p></p>
