--- a/research.html
+++ b/research.html
@@ -27,7 +27,7 @@
 						<nav id="nav">
 							<ul>
 								<li><a href="index.html">Home</a></li>
-								<li><a href="Peter Smith CV summer 25.pdf">CV</a></li>
+								<li><a href="Peter Smith CV Fa25.pdf">CV</a></li>
 								<li > <a href=#>Research</a> </li>
 								<!-- <li><a href="citsci.html">Education</a></li> -->
 								<li><a href="resources.html">Resources</a></li>
