--- a/resources.html
+++ b/resources.html
@@ -52,7 +52,8 @@
 									<header>
 										<h1>Quick References</h1>
 									</header>
-									<li><a href="http://www.astro.wisc.edu/~dolan/constants.html">Physical Constants and Astronomical Data</a></li>
+									<!-- <li><a href="http://www.astro.wisc.edu/~dolan/constants.html">Physical Constants and Astronomical Data</a></li> -->
+									<li><a href="https://www.physics.rutgers.edu/grad/541/constants.html">Physical and Astronomical Constants</a></li>
 									<li><a href="https://matplotlib.org/3.1.1/gallery/color/colormap_reference.html">Matplotlib colormaps</a></li>
 									<li><a href="https://www.w3.org/TR/css-color-3/#svg-color">Matplotlib colors</a></li>
 									<li><a href="https://journals.aas.org/aastexguide/">AASTeX author guide</a></li>
@@ -62,6 +63,9 @@
 									<li><a href="https://exoplanetarchive.ipac.caltech.edu/">NASA exoplanet archive</a></li>
 									<li><a href="https://www.astro.keele.ac.uk/jkt/tepcat/">TEPCat catalogue of transiting exoplanet properties</a></li>
 									<li><a href="http://simbad.u-strasbg.fr/simbad/">SIMBAD Astronomical Database</a></li>
+									<li><a href="https://en.wikipedia.org/wiki/Propagation_of_uncertainty">Propagation of Uncertainty</a></li>
+									<li><a href="https://ui.adsabs.harvard.edu/">NASA Astrophysics Data System</a></li>
+									<li><a href="https://arxiv.org/list/astro-ph.EP/recent">Earth and Planetary Astrophysics arXiv</a></li>
 
 									<br>
 									<header>
@@ -74,6 +78,14 @@
 									<li><a href="https://astrobites.org/">Astrobites</a></li>
 									<li><a href="https://todayinsci.com/">Today in science history</a></li>
 									<li><a href="https://www.astrobetter.com/">AstroBetter</a></li>
+
+									<br>
+									<header>
+										<h1>Getting Started</h1>
+									</header>
+									<li><a href="https://www.snappywords.com/knowledge/navigating-the-stars-a-young-learners-guide-to-astronomy">Young Learner's Guide to Astronomy</a></li>
+									<li><a href="https://eyes.nasa.gov/apps/exo/">Eyes on Exoplanets</a></li>
+									<li><a href="https://www.zooniverse.org/">Zooniverse Citizen Science</a></li>
 
 									<br>
 									<header>
